--- a/style.css
+++ b/style.css
@@ -579,7 +579,6 @@ span {
 }
  .services-box:hover {
   border-color: var(--main-color);
-  transform: scale(1.03);
 }
 
 .services-box i {
@@ -795,7 +794,7 @@ span {
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
   background:-webkit-linear-gradient(90deg,rgb(31,102,31),rgb(231,231,121));  
   border-radius:10px;
-  margin:10px;  
+  margin:40px;  
   align-self:stretch ;
   flex: 1 1 21%;
   opacity:0;
@@ -813,7 +812,7 @@ span {
 
 
 .fcard:hover{
-  box-shadow: 2px 2px rgb(185, 185, 106);
+  box-shadow: 0px 2px 10px 2px rgb(236, 236, 235);
 }
 .article h2{
   font-size: 22px;
