--- a/style.css
+++ b/style.css
@@ -464,6 +464,7 @@ span {
   z-index: 2;
   display: flex;
   align-items: center;
+  flex-direction: column;
   gap: 20px;
   width: 80%;
 }
@@ -471,8 +472,6 @@ span {
 .about-content .heading {
   text-align: center;
   font-size: 9rem;
-  margin-bottom: 30px;
-  margin-right: 30px;
 }
 
 .about-content .heading span {
@@ -499,7 +498,6 @@ span {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  margin-left: 30px;
 }
 
 @media (max-width: 1024px) {
@@ -1059,13 +1057,17 @@ input[type="number"]::-webkit-inner-spin-button {
 /* Modal styles */
 .modal {
   display: none;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  z-index: 1;
+  z-index: 101;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /*overflow: auto;*/
   background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -1397,6 +1399,7 @@ input[type="number"]::-webkit-inner-spin-button {
   }
   .portfolio-container {
     grid-template-columns: 1fr;
+    justify-items: center;
   }
   
   .footerUpperPart {
