--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ section {
   height: 100%;
   width: 20%; /* Each slide occupies 20% width */
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .home-content{
