--- a/style.css
+++ b/style.css
@@ -155,7 +155,6 @@ section {
   font-size: 3.6rem;
   color: var(--txt-color);
   display: none;
-  cursor: pointer;
 }
 
 /* .home {
@@ -1122,19 +1121,19 @@ input[type="number"]::-webkit-inner-spin-button {
     top: 100%;
     left: 0;
     width: 100%;
-    height: 0;
     padding: 1rem 1%;
     background: var(--bg-color);
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);   
-    overflow: hidden;
-    transition:height 0.3s ease-in-out ; 
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    display: none;
   }
 
-
+  .navbar :active {
+    display: block;
+  }
   .navbar a {
     display: block;
-    font-size: 20px;
+    font-size: 2.8vmax;
     margin: 3rem 0;
     margin-left: 8vmax;
   }
