--- a/blogs/smartfarming/style.css
+++ b/blogs/smartfarming/style.css
@@ -2,6 +2,8 @@ body {
   background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   background-size: cover;
   width: 80%;
+  background-position: center;
+  background-attachment: fixed;
   /*border: 20px solid ;*/
   font-family: sans-serif;
   padding: 20px;
